fixed galery display on mobile

--- a/blessedsleepseeker_com/templates/static/base.css
+++ b/blessedsleepseeker_com/templates/static/base.css
@@ -31,7 +31,7 @@
 
 .card-img-top {
     width: 100%;
-    height: 15vw;
+    height: 30vh;
     object-fit: cover;
 }
 
